update features