@@ -1,27 +1,33 @@
 package io.sentrius.sso.config;
 
 import java.net.URI;
+import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.util.Base64;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.concurrent.TimeUnit;
 
+import io.netty.handler.timeout.ReadTimeoutHandler;
+import io.netty.handler.timeout.WriteTimeoutHandler;
 import io.sentrius.sso.core.services.security.ZeroTrustAccessTokenService;
+import io.sentrius.sso.core.services.agents.AgentExecutionAuditService;
 import io.sentrius.sso.locator.KubernetesAgentLocator;
 import io.sentrius.sso.service.ActiveWebSocketSessionManager;
 import lombok.RequiredArgsConstructor;
 
-import org.springframework.core.io.buffer.DataBuffer;
-import org.springframework.core.io.buffer.DataBufferUtils;
-import org.springframework.core.io.buffer.NettyDataBuffer;
 import org.springframework.stereotype.Component;
+import org.springframework.web.reactive.socket.CloseStatus;
 import org.springframework.web.reactive.socket.WebSocketHandler;
 import org.springframework.web.reactive.socket.WebSocketMessage;
 import org.springframework.web.reactive.socket.WebSocketSession;
 import org.springframework.web.reactive.socket.client.ReactorNettyWebSocketClient;
 
-import io.sentrius.sso.core.services.security.CryptoService;
 import lombok.extern.slf4j.Slf4j;
+import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
+import reactor.netty.http.client.HttpClient;
+
 
 @Component
 @Slf4j
@@ -31,6 +37,7 @@ public class AgentWebSocketProxyHandler implements WebSocketHandler {
     private final KubernetesAgentLocator agentLocator;
     private final ActiveWebSocketSessionManager sessionManager;
     private final ZeroTrustAccessTokenService ztatService;
+    private final AgentExecutionAuditService agentExecutionAuditService;
 
     @Override
     public Mono<Void> handle(WebSocketSession clientSession) {
@@ -39,134 +46,238 @@ public class AgentWebSocketProxyHandler implements WebSocketHandler {
             var queryParams = parseQueryParams(uri);
 
             String agentHost = queryParams.get("phost");
+            if (agentHost == null || agentHost.isEmpty()) {
+                log.error("Missing required parameter: phost");
+                return clientSession.close(CloseStatus.BAD_DATA)
+                    .then(Mono.error(new RuntimeException("Missing required parameter: phost")));
+            }
+
             if (agentHost.startsWith("wss://")) {
                 agentHost = agentHost.replace("wss://", "ws://");
             }
+
             String sessionId = queryParams.get("sessionId");
-            sessionId = sessionId.replace(" ","+");
+            if (sessionId == null || sessionId.isEmpty()) {
+                log.error("Missing required parameter: sessionId");
+                return clientSession.close(CloseStatus.BAD_DATA)
+                    .then(Mono.error(new RuntimeException("Missing required parameter: sessionId")));
+            }
+            sessionId = sessionId.replace(" ", "+");
+
             String chatGroupId = queryParams.get("chatGroupId");
-            chatGroupId = chatGroupId.replace(" ","+");
+            if (chatGroupId != null) {
+                chatGroupId = chatGroupId.replace(" ", "+");
+            }
+
             String ztat = queryParams.get("ztat");
             String ztatForChat = queryParams.get("jwt");
+
             String userId = queryParams.get("userId");
-            userId = userId.replace(" ","+");
+            if (userId != null) {
+                userId = userId.replace(" ", "+");
+            }
 
-
+            // Validate ZTAT token
             if (ztatForChat != null && !ztatForChat.isEmpty()) {
-                log.info("ZTAT for chat: {}", ztatForChat);
-                if ( !ztatService.isOpsActive(ztatForChat) ){
-                    log.info("Invalid ZTAT token for sessionId: {}, ztat: {}", sessionId, ztatForChat);
-                    //return Mono.error(new RuntimeException("Invalid ZTAT token for sessionId: " + sessionId));
+                log.info("ZTAT for chat received for sessionId: {}", sessionId);
+                if (!ztatService.isOpsActive(ztatForChat)) {
+                    log.warn("ZTAT token validation failed for sessionId: {}", sessionId);
+                    // Continue anyway - token might still be valid for the agent
                 }
                 ztatService.incremenOpsUses(ztatForChat);
-
             } else {
-                log.info("Invalid ZTAT token for sessionId: {}", sessionId);
-                return Mono.error(new RuntimeException("Invalid ZTAT token") );
+                log.error("Missing ZTAT token for sessionId: {}", sessionId);
+                return clientSession.close(CloseStatus.POLICY_VIOLATION)
+                    .then(Mono.error(new RuntimeException("Invalid ZTAT token")));
             }
-            log.info("Handling WebSocket connection for host: {}, sessionId: {}, chatGroupId: {}, ztat: {}, userId: {}",
-                agentHost, sessionId, chatGroupId, ztat, userId);
 
-            URI agentUri = agentLocator.resolveWebSocketUri(agentHost.toLowerCase(), sessionId, chatGroupId, ztat,
-                userId);
+            log.info("Handling WebSocket connection for host: {}, sessionId: {}, chatGroupId: {}, userId: {}",
+                agentHost, sessionId, chatGroupId, userId);
 
+            // Create agent execution audit for this WebSocket session
+            // The chatGroupId is the execution ID for agent chat sessions
+            try {
+                if (chatGroupId != null && !chatGroupId.isEmpty()) {
+                    var existingAudit = agentExecutionAuditService.getAuditByExecutionId(chatGroupId);
+                    if (existingAudit.isEmpty()) {
+                        String actualUserId = userId != null && !userId.isEmpty() ? userId : "unknown";
+                        agentExecutionAuditService.createAudit(
+                            agentHost,
+                            chatGroupId,
+                            "chat-helper",
+                            actualUserId
+                        );
+                        log.info("Created agent execution audit for chat session: {}, agent: {}, user: {}", 
+                            chatGroupId, agentHost, actualUserId);
+                    }
+                }
+            } catch (Exception e) {
+                log.warn("Failed to create agent execution audit for chat session: {}", chatGroupId, e);
+            }
+
+            URI agentUri = agentLocator.resolveWebSocketUri(agentHost.toLowerCase(), sessionId, chatGroupId, ztat, userId);
             log.info("Resolved agent URI: {}", agentUri);
 
-            ReactorNettyWebSocketClient proxyClient = new ReactorNettyWebSocketClient();
+            // Configure HTTP client with generous timeouts for long-lived WebSocket connections
+            HttpClient httpClient = HttpClient.create()
+                .responseTimeout(Duration.ofMinutes(60))
+                .keepAlive(true)
+                .doOnConnected(conn -> {
+                    log.debug("Proxy client connected, adding timeout handlers");
+                    conn.addHandlerLast(new ReadTimeoutHandler(65, TimeUnit.MINUTES));
+                    conn.addHandlerLast(new WriteTimeoutHandler(65, TimeUnit.MINUTES));
+                });
+
+            ReactorNettyWebSocketClient proxyClient = new ReactorNettyWebSocketClient(httpClient);
 
             sessionManager.register(sessionId, clientSession);
-            String finalSessionId = sessionId;
+            final String finalSessionId = sessionId;
+            final String finalChatGroupId = chatGroupId; // Make final for lambda access
+
+            // Subscribe to client close status for debugging
+            clientSession.closeStatus()
+                .doOnNext(status -> log.info("CLIENT session close initiated: code={}, reason='{}'",
+                    status.getCode(), status.getReason()))
+                .subscribe();
 
             return proxyClient.execute(agentUri, agentSession -> {
-                log.info("Proxy client connected to agent");
+                    log.info("Proxy client connected to agent for session: {}", finalSessionId);
 
-                Mono<Void> clientToAgent = clientSession.receive()
-                    .doOnSubscribe(s -> log.info("client -> agent subscribed"))
-                    .doOnNext(m -> log.debug("client -> agent: message type {}", m.getType()))
-                    .flatMap(webSocketMessage -> {
-                        if (webSocketMessage.getType() == WebSocketMessage.Type.TEXT) {
-                            return Mono.just(agentSession.textMessage(webSocketMessage.getPayloadAsText()));
-                        } else {
-                            log.warn("Client sent a BINARY message to agent. Agent expects TEXT. Converting to Base64 Text.");
-                            return DataBufferUtils.join(Mono.just(webSocketMessage.getPayload()))
-                                .map(dataBuffer -> {
-                                    byte[] bytes = new byte[dataBuffer.readableByteCount()];
-                                    dataBuffer.read(bytes);
-                                    DataBufferUtils.release(dataBuffer);
-                                    return agentSession.textMessage(Base64.getEncoder().encodeToString(bytes));
-                                });
-                        }
-                    })
-                    .as(agentSession::send)
-                    .doOnSuccess(aVoid -> log.info("client -> agent completed gracefully")) // Corrected for Mono
-                    .doOnError(e -> log.error("Error in client -> agent stream", e))
-                    .onErrorResume(e -> {
-                        log.error("Client to agent stream error, closing client session.", e);
-                        return clientSession.close().then(Mono.empty());
-                    })
-                    .doFinally(sig -> log.info("Client to agent stream finalized: {}", sig));
+                    // Subscribe to agent close status for debugging
+                    agentSession.closeStatus()
+                        .doOnNext(status -> log.info("AGENT session close initiated: code={}, reason='{}'",
+                            status.getCode(), status.getReason()))
+                        .subscribe();
 
-// Stream from agent to client (Agent -> Proxy -> Client)
-                Mono<Void> agentToClient = agentSession.receive()
-                    .doOnSubscribe(s -> log.info("agent -> client subscribed"))
-                    .doOnNext(m -> log.debug("agent -> client: message type {}", m.getType()))
-                    .flatMap(webSocketMessage -> {
-                        if (webSocketMessage.getType() == WebSocketMessage.Type.TEXT) {
-                            return Mono.just(clientSession.textMessage(webSocketMessage.getPayloadAsText()));
-                        } else {
-                            log.warn("Agent sent a BINARY message to client. Client expects TEXT. Converting to Base64 Text.");
-                            return DataBufferUtils.join(Mono.just(webSocketMessage.getPayload()))
-                                .map(dataBuffer -> {
-                                    byte[] bytes = new byte[dataBuffer.readableByteCount()];
-                                    dataBuffer.read(bytes);
-                                    DataBufferUtils.release(dataBuffer);
-                                    return clientSession.textMessage(Base64.getEncoder().encodeToString(bytes));
-                                });
-                        }
-                    })
-                    .as(clientSession::send)
-                    .doOnSuccess(aVoid -> log.info("agent -> client completed gracefully")) // Corrected for Mono
-                    .doOnError(e -> {
-                        log.error("Error in agent -> client stream", e);
-                        sessionManager.unregister(agentSession.getId());
-                    })
-                    .onErrorResume(e -> {
-                        sessionManager.unregister(agentSession.getId());
-                        log.error("Agent to client stream error, closing agent session.", e);
-                        return agentSession.close().then(Mono.empty());
-                    })
-                    .doFinally(sig -> log.info("Agent to client stream finalized: {}", sig));
+                    // Keep-alive ping every 15 seconds to prevent idle timeouts
+                    Flux<WebSocketMessage> keepAlivePings = Flux.interval(Duration.ofSeconds(15))
+                        .map(tick -> {
+                            log.trace("Sending keep-alive ping #{} for session: {}", tick, finalSessionId);
+                            return clientSession.pingMessage(factory ->
+                                factory.wrap(("proxy-ping-" + tick).getBytes(StandardCharsets.UTF_8)));
+                        })
+                        .doOnError(e -> log.warn("Keep-alive ping error: {}", e.getMessage()));
 
+                    // Stream from client to agent (Client -> Proxy -> Agent)
+                    Flux<WebSocketMessage> clientMessages = clientSession.receive()
+                        .doOnSubscribe(s -> log.info("client -> agent stream subscribed for session: {}", finalSessionId))
+                        .doOnNext(m -> {
+                            if (m.getType() != WebSocketMessage.Type.PONG) {
+                                log.debug("client -> agent: message type {} for session: {}", m.getType(), finalSessionId);
+                            }
+                        })
+                        .filter(msg -> msg.getType() != WebSocketMessage.Type.PONG) // Filter out pong responses
+                        .map(webSocketMessage -> {
+                            if (webSocketMessage.getType() == WebSocketMessage.Type.TEXT) {
+                                String text = webSocketMessage.getPayloadAsText();
+                                return agentSession.textMessage(text);
+                            } else if (webSocketMessage.getType() == WebSocketMessage.Type.BINARY) {
+                                log.debug("Client sent BINARY message, converting to Base64 text");
+                                byte[] bytes = new byte[webSocketMessage.getPayload().readableByteCount()];
+                                webSocketMessage.getPayload().read(bytes);
+                                String base64 = Base64.getEncoder().encodeToString(bytes);
+                                return agentSession.textMessage(base64);
+                            } else if (webSocketMessage.getType() == WebSocketMessage.Type.PING) {
+                                // Forward ping as text (agent might not handle WebSocket pings)
+                                return agentSession.textMessage("ping");
+                            } else {
+                                log.warn("Unexpected message type from client: {}", webSocketMessage.getType());
+                                return agentSession.textMessage("");
+                            }
+                        })
+                        .filter(msg -> !msg.getPayloadAsText().isEmpty());
+
+                    Mono<Void> clientToAgent = clientMessages
+                        .concatWith(Mono.never()) // Keep stream open
+                        .as(agentSession::send)
+                        .doOnError(e -> log.error("Error in client -> agent stream for session: {}", finalSessionId, e))
+                        .onErrorResume(e -> {
+                            log.warn("Client to agent stream error, attempting graceful handling for session: {}", finalSessionId);
+                            return Mono.empty();
+                        })
+                        .doFinally(sig -> log.info("Client to agent stream finalized with signal: {} for session: {}", sig, finalSessionId));
+
+                    // Stream from agent to client (Agent -> Proxy -> Client)
+                    Flux<WebSocketMessage> agentMessages = agentSession.receive()
+                        .doOnSubscribe(s -> log.info("agent -> client stream subscribed for session: {}", finalSessionId))
+                        .doOnNext(m -> log.debug("agent -> client: message type {} for session: {}", m.getType(), finalSessionId))
+                        .map(webSocketMessage -> {
+                            if (webSocketMessage.getType() == WebSocketMessage.Type.TEXT) {
+                                String text = webSocketMessage.getPayloadAsText();
+                                return clientSession.textMessage(text);
+                            } else if (webSocketMessage.getType() == WebSocketMessage.Type.BINARY) {
+                                log.debug("Agent sent BINARY message, converting to Base64 text");
+                                byte[] bytes = new byte[webSocketMessage.getPayload().readableByteCount()];
+                                webSocketMessage.getPayload().read(bytes);
+                                String base64 = Base64.getEncoder().encodeToString(bytes);
+                                return clientSession.textMessage(base64);
+                            } else {
+                                log.warn("Unexpected message type from agent: {}", webSocketMessage.getType());
+                                return clientSession.textMessage("");
+                            }
+                        })
+                        .filter(msg -> !msg.getPayloadAsText().isEmpty());
+
+                    // Merge agent messages with keep-alive pings
+                    Mono<Void> agentToClient = agentMessages
+                        .mergeWith(keepAlivePings) // Include keep-alive pings
+                        .concatWith(Mono.never()) // Keep stream open
+                        .as(clientSession::send)
+                        .doOnError(e -> {
+                            log.error("Error in agent -> client stream for session: {}", finalSessionId, e);
+                            sessionManager.unregister(finalSessionId);
+                        })
+                        .onErrorResume(e -> {
+                            log.warn("Agent to client stream error, attempting graceful handling for session: {}", finalSessionId);
+                            sessionManager.unregister(finalSessionId);
+                            return Mono.empty();
+                        })
+                        .doFinally(sig -> log.info("Agent to client stream finalized with signal: {} for session: {}", sig, finalSessionId));
+
+                    // Combine both streams - connection stays open as long as either stream is active
                     return Mono.when(clientToAgent, agentToClient)
+                        .doOnSubscribe(s -> log.info("WebSocket proxy streams started for session: {}", finalSessionId))
+                        .doOnSuccess(v -> {
+                            log.info("WebSocket proxy completed successfully for session: {}", finalSessionId);
+                            // Close the agent execution audit when connection completes successfully
+                            closeAgentExecutionAudit(finalChatGroupId, "COMPLETED");
+                        })
                         .doOnTerminate(() -> {
-                            log.info("WebSocket proxy connection terminated (client and agent " +
-                                "streams completed/cancelled)");
-                            sessionManager.unregister(agentSession.getId());
-
+                            log.info("WebSocket proxy connection terminated for session: {}", finalSessionId);
+                            sessionManager.unregister(finalSessionId);
+                            // Close the agent execution audit on termination
+                            closeAgentExecutionAudit(finalChatGroupId, "COMPLETED");
                         })
                         .doOnError(e -> {
-                            log.error("Overall proxy connection failed", e);
-                            sessionManager.unregister(agentSession.getId());
-
-                        })
-                        .doFinally(sig -> {
+                            log.error("WebSocket proxy connection error for session: {}", finalSessionId, e);
                             sessionManager.unregister(finalSessionId);
-                            log.info("WebSocket proxy stream closed completely: {}. Final session ID: {}", sig, finalSessionId);
+                            // Mark as error if connection failed
+                            closeAgentExecutionAudit(finalChatGroupId, "ERROR");
+                        })
+                        .doOnCancel(() -> {
+                            log.warn("WebSocket proxy connection CANCELLED for session: {}", finalSessionId);
+                            sessionManager.unregister(finalSessionId);
+                            // Mark as cancelled/completed
+                            closeAgentExecutionAudit(finalChatGroupId, "COMPLETED");
                         });
-            }
-            ).doOnError(e -> {
-                log.error("Failed to establish proxy connection", e);
-                sessionManager.unregister(finalSessionId);
-            });
-
+                })
+                .doOnSubscribe(s -> log.info("Initiating proxy connection for session: {}", finalSessionId))
+                .doOnError(e -> {
+                    log.error("Failed to establish proxy connection for session: {}", finalSessionId, e);
+                    sessionManager.unregister(finalSessionId);
+                })
+                .doOnTerminate(() -> log.info("Proxy client execution completed for session: {}", finalSessionId))
+                .doOnCancel(() -> {
+                    log.warn("Proxy client execution CANCELLED for session: {}", finalSessionId);
+                    sessionManager.unregister(finalSessionId);
+                });
 
         } catch (Exception ex) {
-            ex.printStackTrace();
-            log.info("WebSocket handshake failed: {}", ex.getMessage());
-            return Mono.error(new RuntimeException("WebSocket handshake failed", ex));
+            log.error("WebSocket handshake failed: {}", ex.getMessage(), ex);
+            return clientSession.close(CloseStatus.SERVER_ERROR)
+                .then(Mono.error(new RuntimeException("WebSocket handshake failed", ex)));
         }
     }
-
 
     private Map<String, String> parseQueryParams(URI uri) {
         Map<String, String> queryMap = new HashMap<>();
@@ -180,6 +291,9 @@ public class AgentWebSocketProxyHandler implements WebSocketHandler {
                         decode(pair.substring(0, idx)),
                         decode(pair.substring(idx + 1))
                     );
+                } else if (idx > 0) {
+                    // Handle empty values
+                    queryMap.put(decode(pair.substring(0, idx)), "");
                 }
             }
         }
@@ -188,10 +302,26 @@ public class AgentWebSocketProxyHandler implements WebSocketHandler {
 
     private String decode(String value) {
         try {
-            return java.net.URLDecoder.decode(value, java.nio.charset.StandardCharsets.UTF_8.name());
+            return java.net.URLDecoder.decode(value, StandardCharsets.UTF_8);
         } catch (Exception e) {
-            return "";
+            log.warn("Failed to decode URL parameter: {}", value);
+            return value;
         }
     }
 
+    /**
+     * Close agent execution audit record when WebSocket session ends
+     */
+    private void closeAgentExecutionAudit(String executionId, String status) {
+        if (executionId == null || executionId.isEmpty()) {
+            return;
+        }
+
+        try {
+            agentExecutionAuditService.closeAudit(executionId, status);
+            log.debug("Closed agent execution audit for execution: {} with status: {}", executionId, status);
+        } catch (Exception e) {
+            log.warn("Failed to close agent execution audit for execution: {}", executionId, e);
+        }
+    }
 }
